# nrf52840-bot-a

./: .gitignore  README.md  west.yml
boards/adafruit/feather_x/: Kconfig  Kconfig.adafruit_feather_x  Kconfig.defconfig  adafruit_feather_x_nrf52840-pinctrl.dtsi  adafruit_feather_x_nrf52840.dts  adafruit_feather_x_nrf52840.yaml  board.yml
boards/nordic/nrf52840dk_x/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.nrf52840dk_x  board.yml  nrf52840dk_x_nrf52811.dts  nrf52840dk_x_nrf52811.yaml  nrf52840dk_x_nrf52840-pinctrl.dtsi  nrf52840dk_x_nrf52840.dts  nrf52840dk_x_nrf52840.yaml
docs/: FeatherBoardHandWiredAdapterBoardSchematic-Rev1.1.drawio  FeatherBoardHandWiredAdapterBoardSchematic-Rev1.2.drawio  nrf52840-Feather-GPIO-Map.xlsx  nrf52840DK-GPIO-Map.xlsx
docs/data/: 2024-05-08-dump-1-30-20-0--30.csv  2024-05-08-dump-1-30-20-0--30.xlsx  2024-05-08-dump-2-15-10-0--30.csv  2024-05-08-dump-2-15-10-0--30.xlsx  2024-05-08-dump-3-15-10-0--80.csv  2024-05-08-dump-3-15-10-0--80.xlsx  2024-05-08-dump-4-15-10-0--50.csv  2024-05-08-dump-4-15-10-0--50.xlsx  2024-05-08-dump-5-15-10-0--50.csv  2024-05-08-dump-5-15-10-0--50.xlsx  TrendLine-For-Stopping-EncCnts.xlsx
docs/lidar/: TF-Luna-Cal-SN4011443.xlsx
docs/servo/: LX16A-BusLinker-v2.5.drawio  LevelShifter.drawio
main/: CMakeLists.txt  prj.conf
main/src/: main.c
main/src/app/: drive_ctrl.c  drive_ctrl.h  lidar.c  lidar.h  mapper.c  mapper.h  mapper_shell.c  panner.c  panner.h  panner_shell.c  roamer_app.c  roamer_app.h  test_app.c  test_app.h  tracks.c  tracks.h  tracks_shell.c
main/src/hw/: dcme.c  dcme.h  drivetrain.c  drivetrain.h  drivetrain_shell.c  i2c_al.h  i2c_al_mac.c  i2c_al_zephyr.c  imu_al.h  imu_al_shell.c  imu_al_zephyr_ism330dhcx.c  lx16a.c  lx16a.h  lx16a_shell.c  pid.c  pid.h  rgb_led.h  rgb_led_neopixel.c  rgb_led_shell.c  sign_of_life.c  sign_of_life.h  start_stop.c  start_stop.h  tfluna.c  tfluna.h  tfluna_shell.c  uart_al.h  uart_al_mac.c  uart_al_windows.c  uart_al_zephyr.c
main/src/svcs/: logger.h  os_al.c  os_al.h  os_al_timer.c  shell_.h  shutdown_shell.c
scripts/sweep_convert/: sweep_convert-old.pl  sweep_convert-older.pl  sweep_convert.pl
